# dbt-allure

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  prep.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
dbt_allure/: __init__.py  __main__.py  configs.py  configuration.py  data.py  parse.py  utils.py
tests/: test_test.py
